[package]
name = "htv-scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[dependencies]
human_bytes = { version = "0.3", features = ["bibytes"] }
inquire = "0.3.0"
rayon = "1.5.3"
reqwest = { version = "0.11.11", features = ["json", "serde_json", "blocking"] }
rfd = "0.10.0"
serde = { version = "1.0.144", features = ["serde_derive"] }
serde_json = "1.0.85"
strum = { version = "0.24.1", features = ["derive"] }
